Changelog:

0.0.3
Technical
Change java version from 1.12 to 1.8 for compatability
Game runs in the main thread

Graphics and UI
Add lighting to planet surfaces so it looks cooler
More accurate orbit circles, now even eccentric orbit circles can be shown, such as an ellipse
Better music
 - Volume can now be changed
 - Music can be toggled better
Available job list

Gameplay:
All buildings are resource storages now
Planet sizes and width changed

0.0.2:
Total Overhauls:
Resources are changed into goods, that can be processed into different resources
Mining is changed into strata, that are similar to veins, just that they have multiple resources
Factories now generate goods

Jobs:
Now, resources are gonna be generated using population and jobs. 
For now, jobs generate resources, and all that you need, but when we get to government types and the like, we'll allow for taxes, and remove the ability to generate your own resources, depending on your government type. You can then use the taxes you levy to buy all kinds of stuff.

Graphics:
Add shadows to planets, and a star map
Add 2 new display images

Debugging:
Add console to see logs without the need to open files up
Bug Fixes:
Pressing the console button twice will not lead to an exception


0.0.1:
Massive changes:
We removed the planet sector system, and replaced it with terrain.
Buildings have been shaken up also
Planets now have terrain, and more feasible sizes. (like wide and shorter)

New Stuff:
Added Music.
There are a few tracks(7 to be exact).
You can add your own music by using the json format. Remember, the length of the music is in seconds.
You can also turn it off in the options.

Added a couple other actions you can do. 
You can now orbit planets, and survey them. (with survey ships)

Ship engines now work. They emit thrust, and affects the speed of the ship.

You can queue actions to go places. 

Put name generator, and one name list.